Add GitHub Actions CI pipeline and test case

--- a/templates/form.html
+++ b/templates/form.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head><title>Employee Onboarding</title></head>
+<head><title>Employee data</title></head>
 <body>
   <h2>Enter Employee Details</h2>
   <form method="POST">
